# preflight-heightmap

./: .gitattributes  .gitignore  pyproject.toml
preflight-heightmap/: app.py
preflight-heightmap/data/: N40E000.hgt  N40E001.hgt  N40E002.hgt  N40E003.hgt  N40E004.hgt  N40E008.hgt  N40E009.hgt  N40W001.hgt  N40W002.hgt  N40W003.hgt  N40W004.hgt  N40W005.hgt  N40W006.hgt  N41E000.hgt  N41E001.hgt  N41E002.hgt  N41E003.hgt  N41E004.hgt  N41E008.hgt  N41E009.hgt  N41E011.hgt  N41W001.hgt  N41W002.hgt  N41W003.hgt  N41W004.hgt  N41W005.hgt  N41W006.hgt  N42E000.hgt  N42E001.hgt  N42E002.hgt  N42E003.hgt  N42E005.hgt  N42E006.hgt  N42E008.hgt  N42E009.hgt  N42E010.hgt  N42E011.hgt  N42W001.hgt  N42W002.hgt  N42W003.hgt  (+153 more)
preflight-heightmap/libs/: altitude.py  files.py  profile.py
preflight-heightmap/routes/cache/: cache.py
preflight-heightmap/routes/elevation/: elevationPoint.py  elevationProfile.py
